<?xml version="1.0" encoding="utf-8"?>   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:weightSum="1.0"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >
        
        <ScrollView
     		    android:id="@+id/scrollView1"
     		    android:layout_width="fill_parent"
     		    android:layout_height="0dp"
     		    android:layout_weight="1.0" >

     		    <LinearLayout
     		        android:id="@+id/Linear1"
     		        android:layout_width="match_parent"
     		        android:layout_height="wrap_content"
     		        android:paddingBottom="10dp"
     		        android:orientation="vertical" >
     		        
     		        <TableRow
			            android:id="@+id/tableRow2"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<ImageView
				            android:id="@+id/imageView1"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="10dp"
				            android:contentDescription="@string/str_desc"
				            android:src="@drawable/ic_pemerintah" />
			     		
			     		<ImageView
				            android:id="@+id/imageView2"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="10dp"
				            android:contentDescription="@string/str_desc"
				            android:src="@drawable/ic_trip" />
			        </TableRow>
			        
     		        <TableRow
			            android:id="@+id/tableRowx1"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingRight="15dp"
					        android:layout_marginRight="50dp"
					        android:paddingLeft="0dp"
					        android:text="@string/str_pemerintah" />
			     		<TextView
					        android:id="@+id/textview_2"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_marginLeft="0dp"
					        android:paddingLeft="5dp"
					        android:paddingRight="15dp"
					        android:text="@string/str_wisata" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRow3"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<ImageView
				            android:id="@+id/imageView3"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginRight="10dp"
				            android:contentDescription="@string/str_desc"
				            android:src="@drawable/ic_makanan" />
			     		
			     		<ImageView
				            android:id="@+id/imageView4"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="20dp"
				            android:layout_marginLeft="10dp"
				            android:contentDescription="@string/str_desc"
				            android:src="@drawable/ic_about" />
			        </TableRow>
			        
			        <TableRow
			            android:id="@+id/tableRowx2"
			            android:layout_marginTop="0dp"
			            android:layout_gravity="center_horizontal"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" >
			
			     		<TextView
					        android:id="@+id/textview_3"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingRight="5dp"
					        android:layout_marginRight="70dp"
					        android:paddingLeft="5dp"
					        android:text="@string/str_kuliner" />
			     		<TextView
					        android:id="@+id/textview_4"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="7dp"
					        android:paddingRight="5dp"
					        android:text="@string/str_about" />
			        </TableRow>
     		        
     		    </LinearLayout>
     		    
     	</ScrollView>

</LinearLayout>
